--- a/front-api/src/app/footer/footer.component.scss
+++ b/front-api/src/app/footer/footer.component.scss
@@ -1,5 +1,9 @@
 footer{
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  background-color : #97C4B8;
   p{
-    background-color : #97C4B8;
+    margin:0;
   }
 }
