--- a/front-api/src/app/home/home.component.html
+++ b/front-api/src/app/home/home.component.html
@@ -1,46 +1,46 @@
 <app-navbar></app-navbar>
 <section>
   <h3>About us</h3>
+  <hr>
 </section>
 <section>
   <h3>Try our API</h3>
+  <hr>
+  <p>Expliquer le fonctionnment de l'API (GET RECIPE, POST RECIPE) + lien vers le swagger</p>
 </section>
 <section>
   <app-recipes-list></app-recipes-list>
 </section>
 <section>
   <h3>Our Team</h3>
+  <hr>
   <div class="d-flex flex-row justify-content-between">
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="assets/images/avatars/avataaars.png" alt="Card image cap">
-      <div class="card-body">
+      <div class="card-body text-center">
         <h5 class="card-title">Cyrielle TOUTON</h5>
         <p class="card-text">Back-end Developer - CEO</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="assets/images/avatars/avataaars(1).png" alt="Card image cap">
-      <div class="card-body">
+      <div class="card-body text-center">
         <h5 class="card-title">Marie VENDRAN</h5>
-        <p class="card-text">Back-end Developer - CTO</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text ">Back-end Developer - CTO</p>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="assets/images/avatars/avataaars(2).png" alt="Card image cap">
-      <div class="card-body">
+      <div class="card-body text-center">
         <h5 class="card-title">Raphaël PERLES</h5>
         <p class="card-text">Devops specialist - Office Happiness Manager</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
       <img class="card-img-top" src="assets/images/avatars/avataaars(3).png" alt="Card image cap">
-      <div class="card-body">
+      <div class="card-body text-center">
         <h5 class="card-title">Matthieu MADEJSKI</h5>
-        <p class="card-text">Front-end Developer - Influencer</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <p class="card-text text-center">Front-end Developer - Influencer</p>
       </div>
     </div>
   </div>
