--- a/front-api/src/app/navbar/navbar.component.html
+++ b/front-api/src/app/navbar/navbar.component.html
@@ -12,4 +12,15 @@
       </li>
     </ul>
   </div>
+  <div>
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <label for="login">Login</label>
+      <input id="login" name="login" formControlName="login" placeholder="login" type="text"/>
+
+      <label for="password">Recipe</label>
+      <input id="password" name="password" formControlName="password" placeholder="password" type="text"/>
+
+      <button class="btn btn-light w-25" type="submit">Log in</button>
+    </form>
+  </div>
 </nav>
