--- a/front-api/src/app/navbar/navbar.component.scss
+++ b/front-api/src/app/navbar/navbar.component.scss
@@ -1,10 +1,12 @@
 nav{
   .nav-link{
-    color : white;
+    color : #f9f3ee;
   }
   .nav-link:hover{
-    color: black;
+    color : #f9f3ee;
+    font-weight: bold;
   }
-  color : white;
+  color : #f9f3ee;
   background-color:#F9CEEE;
+  height: 60px;
 }
