--- a/front-api/src/app/navbar/navbar.component.html
+++ b/front-api/src/app/navbar/navbar.component.html
@@ -2,25 +2,30 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" [routerLink]="'/'">Homepage</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Try our API</a>
       </li>
     </ul>
   </div>
   <div>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
-      <label for="login">Login</label>
-      <input id="login" name="login" formControlName="login" placeholder="login" type="text"/>
+    <form class="d-flex flex-row justify-content-between" [formGroup]="loginForm" (ngSubmit)="login()">
+      <label for="username" class="align-self-center mx-2">Login</label>
+      <input id="username" name="username" formControlName="username" placeholder="username" type="text"/>
 
-      <label for="password">Recipe</label>
+      <label for="password" class="align-self-center mx-2">Recipe</label>
       <input id="password" name="password" formControlName="password" placeholder="password" type="text"/>
 
-      <button class="btn btn-light w-25" type="submit">Log in</button>
+
+
+      <button *ngIf="this.button === true; else noButton" class="btn btn-light w-25 mx-2" type="submit">Log in</button>
+      <ng-template #noButton>
+        <button class="btn btn-success mx-2">Logged-in</button>
+      </ng-template>
     </form>
   </div>
 </nav>
