--- a/front-api/src/app/footer/footer.component.html
+++ b/front-api/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>C# - .NET CORE Framework - API Experimentations - © Madejski Matthieu - Perles Raphaël - Touton Cyrielle - Vendran Marie - IPI 2022</p>
+  C# - .NET CORE Framework - API Experimentations - © Madejski Matthieu - Perles Raphaël - Touton Cyrielle - Vendran Marie - IPI 2022
 </footer>
