--- a/front-api/src/app/recipes-list/recipes-list.component.html
+++ b/front-api/src/app/recipes-list/recipes-list.component.html
@@ -33,9 +33,12 @@
       <td class="col-1 align-middle">{{recipe.budget}} €</td>
       <td class="col-4 align-middle">{{recipe.description}}</td>
       <td class="col-1 text-center align-middle">
+        <div *ngIf="this.recipe.id !== 1">
         <button [disabled]="isButtonDisabled" (click)="this.deleteRecipe(recipe.id)" class="btn btn-danger text-white">
           X
         </button>
+      </div>
+
       </td>
   </table>
 </div>
@@ -44,22 +47,25 @@
 </ng-template>
 <div>
   <hr>
-  <h3>Add a recipe</h3>
+  <h3>Play with recipes</h3>
   <hr>
   <div class="d-flex flex-row">
-    <form class="d-flex flex-column w-50 m-auto" [formGroup]="recipeForm" (ngSubmit)="createRecipe()">
 
+    <form class="d-flex flex-column w-25 m-auto" [formGroup]="createRecipeForm" (ngSubmit)="createRecipe()">
+      <h5>Add your own recipe</h5>
+      <h6>Have fun and add or invent a new recipe</h6>
+      <hr>
       <label for="name">Recipe name</label>
       <input class="mb-2" id="name" name="name" formControlName="name" placeholder="Name your recipe" type="text"/>
       <label for="urlPicture">Recipe photo Url</label>
-      <input class="mb-2" id="urlPicture" name="urlPicture" formControlName="urlPicture"
-             placeholder="Url of your recipe photo" type="text"/>
+      <textarea cols="50" rows="5" class="mb-2" id="urlPicture" name="urlPicture" formControlName="urlPicture"
+             placeholder="Url of your recipe photo" type="text"></textarea>
       <label for="description">Description</label>
-      <input class="mb-2" id="description" name="description" formControlName="description"
-             placeholder="Describe (shortly) your recipe" type="text"/>
+      <textarea cols="50" rows="5" class="mb-2" id="description" name="description" formControlName="description"
+             placeholder="Describe (shortly) your recipe" type="text"></textarea>
       <label for="ingredients">Ingredients</label>
-      <input class="mb-2" id="ingredients" name="ingredients" formControlName="ingredients"
-             placeholder="List your recipes ingredients" type="text"/>
+      <textarea cols="50" rows="5" class="mb-2" id="ingredients" name="ingredients" formControlName="ingredients"
+             placeholder="List your recipes ingredients" type="text"></textarea>
 
       <label for="duration">Duration</label>
       <input class="mb-2" id="duration" name="duration" formControlName="duration"
@@ -78,10 +84,49 @@
              type="number"/>
 
       <label for="recipe">Recipe</label>
-      <input class="mb-2" id="recipe" name="recipe" formControlName="recipe"
-             placeholder="Describe all the steps of your recipe" type="text"/>
+      <textarea cols="50" rows="5" class="mb-2" id="recipe" name="recipe" formControlName="recipe"
+             placeholder="Describe all the steps of your recipe" type="text"></textarea>
 
       <button [disabled]="isButtonDisabled" class="btn btn-light w-25 mt-2" type="submit">Create Recipe</button>
+
+    </form>
+    <form class="d-flex flex-column w-25 m-auto" [formGroup]="editRecipeForm" (ngSubmit)="editRecipe(this.recipeToEdit.id)">
+      <h5>Edit a recipe</h5>
+      <h6>We allow you to edit the recipe n2 only</h6>
+      <hr>
+      <label for="name">Recipe name</label>
+      <input class="mb-2" id="edit_name" name="name" formControlName="name" placeholder="Name your recipe" type="text"/>
+      <label for="urlPicture">Recipe photo Url</label>
+      <textarea cols="50" rows="5" class="mb-2" id="edit_urlPicture" name="urlPicture" formControlName="urlPicture"
+             placeholder="Url of your recipe photo" type="text"></textarea>
+      <label for="description">Description</label>
+      <textarea cols="50" rows="5" class="mb-2" id="edit_description" name="description" formControlName="description"
+             placeholder="Describe (shortly) your recipe" type="text"></textarea>
+      <label for="ingredients">Ingredients</label>
+      <textarea cols="50" rows="5" class="mb-2" id="edit_ingredients" name="ingredients" formControlName="ingredients"
+             placeholder="List your recipes ingredients" type="text"></textarea>
+
+      <label for="duration">Duration</label>
+      <input class="mb-2" id="edit_duration" name="duration" formControlName="duration"
+             placeholder="How long (in min) does it take to cook your recipe" type="number"/>
+
+      <label for="score">Score</label>
+      <input class="mb-2" id="edit_score" name="score" formControlName="score" placeholder="Choose a score between 1 and 5"
+             type="number" [min]="1" [max]="5"/>
+
+      <label for="difficulty">Difficulty</label>
+      <input class="mb-2" id="edit_difficulty" name="difficulty" formControlName="difficulty"
+             placeholder="Choose a score between 1 and 3" type="number" [min]="1" [max]="3"/>
+
+      <label for="budget">Budget</label>
+      <input class="mb-2" id="edit_budget" name="budget" formControlName="budget" placeholder="Recipe price in €"
+             type="number"/>
+
+      <label for="recipe">Recipe</label>
+      <textarea cols="50" rows="5" class="mb-2" id="edit_recipe" name="recipe" formControlName="recipe"
+             placeholder="Describe all the steps of your recipe" type="text"></textarea>
+
+      <button [disabled]="isButtonDisabled" class="btn btn-light w-25 mt-2" type="submit">Edit Recipe</button>
 
     </form>
   </div>
