--- a/front-api/src/app/navbar/navbar.component.html
+++ b/front-api/src/app/navbar/navbar.component.html
@@ -5,10 +5,16 @@
         <a class="nav-link" [routerLink]="'/'">Homepage</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About us</a>
+        <a class="nav-link" href="#about">About us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Try our API</a>
+        <a class="nav-link" href="#try">Try our API</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#play">Play with Recipes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#team">Our Team</a>
       </li>
     </ul>
   </div>
