--- a/front-api/src/app/navbar/navbar.component.scss
+++ b/front-api/src/app/navbar/navbar.component.scss
@@ -1,12 +1,13 @@
 nav{
   .nav-link{
-    color : #f9f3ee;
+    color : #F9F3EE;
   }
   .nav-link:hover{
-    color : #f9f3ee;
+    color : #F9F3EE;
     font-weight: bold;
   }
   color : #f9f3ee;
   background-color:#F9CEEE;
   height: 60px;
+  font-size: large;
 }
