--- a/front-api/src/app/recipes-list/recipes-list.component.html
+++ b/front-api/src/app/recipes-list/recipes-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="recipes !== undefined; else noRecipes">
   <hr>
-  <h3>Your recipes</h3>
+  <h3>YOUR RECIPES</h3>
   <hr>
   <h6>Check the recipes you have just created with our API</h6>
   <table class="table">
