--- a/front-api/src/app/home/home.component.scss
+++ b/front-api/src/app/home/home.component.scss
@@ -12,4 +12,9 @@ section:nth-child(odd){
 section:nth-child(even){
   background-color : #CCF3EE;
 }
+#team{
+  div{
+    padding: 20px 0 20px 0;
+  }
+}
 
