--- a/front-api/src/app/home/home.component.html
+++ b/front-api/src/app/home/home.component.html
@@ -2,6 +2,11 @@
 <section id="about">
   <hr>
   <h3>ABOUT US</h3>
+  <p>
+    4 cooking and computer enthusiasts offering you their unique API ! <br>
+    <strong>Make your own recipe book thanks to our teamwork.</strong><br>
+    Always benevolent, studious and in a good mood!
+  </p>
   <hr>
 </section>
 <section id="try">
@@ -30,7 +35,7 @@
     - There is only one administrator role (requested in order to add or update a recipe)<br>
     - Finally, use the form, enter a new recipe to add (the add request will be called)<br><br>
     
-    You can read with Swagger the <strong><a href="https://recipebackend.azurewebsites.net/swagger">How it works</a></strong> and enjoy using our powerful recipe API right now.<br><br>
+    You can read with Swagger the <strong><a target="_blank" href="https://recipebackend.azurewebsites.net/swagger">How it works</a></strong> and enjoy using our powerful recipe API right now.<br><br>
     
     Read more about this API and subscription plan in the FAQ.</p>
 </section>
