about us completion

--- a/front-api/src/app/home/home.component.html
+++ b/front-api/src/app/home/home.component.html
@@ -3,10 +3,18 @@
   <hr>
   <h3>ABOUT US</h3>
   <p>
-    4 cooking and computer enthusiasts offering you their unique API ! <br>
-    <strong>Make your own recipe book thanks to our teamwork.</strong><br>
-    Always benevolent, studious and in a good mood!
+    Cakes, sweets, rainbow sprinkles, candies,.. Our passion is to make your childhood dream come true.
+    DessertAPI story has started from a simple question : <caption>Where is my cheese cake recipe ?!</caption>
+    Our 4 outstanding developers/free time chefs came with the simple idea of collecting recipes into the same place.
+    Retrieving our recipes has never been this easy!
+    Get inspiration from the users recipes all around the world!
+    <br><strong>Make your own recipe book.</strong><br>
+    We are glad of offering you this unique API!
+    
+    Eager to see you smile while baking, we will never stop growing this API to further steps!
+    Enjoy and start baking.
   </p>
+  <p>Please refer to <a href="#team">Our Team</a> section to know more about the members of DessertAPI.</p>
   <hr>
 </section>
 <section id="try">
