about us and api completion

--- a/front-api/src/app/home/home.component.html
+++ b/front-api/src/app/home/home.component.html
@@ -4,8 +4,9 @@
   <h3>ABOUT US</h3>
   <p>
     Cakes, sweets, rainbow sprinkles, candies,.. Our passion is to make your childhood dream come true.
-    DessertAPI story has started from a simple question : <caption>Where is my cheese cake recipe ?!</caption>
-    Our 4 outstanding developers/free time chefs came with the simple idea of collecting recipes into the same place.
+    DessertAPI story has started from a simple question : 
+  </p><caption>Where is my cheese cake recipe ?!</caption>
+  <p>Our 4 outstanding developers/free time chefs came with the simple idea of collecting recipes into the same place.
     Retrieving our recipes has never been this easy!
     Get inspiration from the users recipes all around the world!
     <br><strong>Make your own recipe book.</strong><br>
@@ -22,28 +23,30 @@
   <h3>TRY OUR API</h3>
   <hr>
   <p>Please, sign up to use our fast and easy-to-work recipe API.<br>
-    As a start to use <strong>DessertAPI</strong> products, we recommend our Recipe API 1.0. For more functionality, please consider our products, which are included in professional collections.<br><br>
+    To start using <strong>DessertAPI</strong> functionalities, we recommend our Recipe API 1.0. For more service, please consider our products, which are included in professional collections.<br><br>
     
-    Make one API call and receive <strong>essential recipes data in one response</strong>:<br>
+    Make an API call and receive <strong>expected recipes return data</strong>:<br>
     
-    - Name of the recipe<br>
-    - Description of the recipe<br>
+    <span>A recipe is composed of :</span>
+    - A name<br>
+    - A description<br>
     - A picture of what it is supposed to look like<br>
-    - Ingredients needed<br>
-    - Difficulty of the recipe<br>
-    - Duration of this cooking<br>
-    - Score from others cookers<br>
-    - Budget<br>
-    - Anf of course, different steps to realize the recipe !<br><br>
+    - A list of all the ingredients needed<br>
+    - The difficulty of the recipe<br>
+    - The duration<br>
+    - The score from the others bakers<br>
+    - The estimated budget<br>
+    - And of course, different steps to realize the recipe !<br><br>
     
+    <span>About the API:</span>
     - A query is used to retrieve all recipes.<br>
-    - Another will show you the details of a particular recipe (by clicking on it)<br>
+    - Another query will show you the details of a particular recipe (by clicking on it)<br>
     - Clicking on the cross next to the recipe will invoke the recipe deletion request <br>
-    - Connect using the login form in order to be able to add a new recipe<br>
+    - Connect using the login form in order to add a new recipe<br>
     - There is only one administrator role (requested in order to add or update a recipe)<br>
-    - Finally, use the form, enter a new recipe to add (the add request will be called)<br><br>
+    - Finally, use the form, insert a new recipe informations and steps then press the button 'Create Recipe' to add the new created recipe into your book(the add request will be called)<br><br>
     
-    You can read with Swagger the <strong><a target="_blank" href="https://recipebackend.azurewebsites.net/swagger">How it works</a></strong> and enjoy using our powerful recipe API right now.<br><br>
+    You can check <strong><a target="_blank" href="https://recipebackend.azurewebsites.net/swagger">How it works</a></strong> with Swagger and enjoy using our powerful recipe API right now.<br><br>
     
     Read more about this API and subscription plan in the FAQ.</p>
 </section>
