about us and api completion

--- a/front-api/src/app/home/home.component.html
+++ b/front-api/src/app/home/home.component.html
@@ -4,15 +4,15 @@
   <h3>ABOUT US</h3>
   <p>
     Cakes, sweets, rainbow sprinkles, candies,.. Our passion is to make your childhood dream come true.
-    DessertAPI story has started from a simple question : 
-  </p><caption>Where is my cheese cake recipe ?!</caption>
-  <p>Our 4 outstanding developers/free time chefs came with the simple idea of collecting recipes into the same place.
+    DessertAPI story has started from a simple question : <br>
+  <q>Where is my cheese cake recipe ?!</q><br><br>
+  Our 4 outstanding developers/free time chefs came with the simple idea of collecting recipes into the same place.<br>
     Retrieving our recipes has never been this easy!
     Get inspiration from the users recipes all around the world!
     <br><strong>Make your own recipe book.</strong><br>
-    We are glad of offering you this unique API!
+    We are glad of offering you this unique API!<br><br>
     
-    Eager to see you smile while baking, we will never stop growing this API to further steps!
+    Eager to see you smile while baking, we will never stop growing this API to further steps!<br>
     Enjoy and start baking.
   </p>
   <p>Please refer to <a href="#team">Our Team</a> section to know more about the members of DessertAPI.</p>
@@ -25,20 +25,18 @@
   <p>Please, sign up to use our fast and easy-to-work recipe API.<br>
     To start using <strong>DessertAPI</strong> functionalities, we recommend our Recipe API 1.0. For more service, please consider our products, which are included in professional collections.<br><br>
     
-    Make an API call and receive <strong>expected recipes return data</strong>:<br>
-    
-    <span>A recipe is composed of :</span>
+    <span>A recipe is composed of :</span><br>
     - A name<br>
     - A description<br>
     - A picture of what it is supposed to look like<br>
     - A list of all the ingredients needed<br>
     - The difficulty of the recipe<br>
     - The duration<br>
-    - The score from the others bakers<br>
+    - The score given from the others bakers<br>
     - The estimated budget<br>
     - And of course, different steps to realize the recipe !<br><br>
     
-    <span>About the API:</span>
+    Make an API call and receive <strong>return data of the expected recipes</strong>:<br>
     - A query is used to retrieve all recipes.<br>
     - Another query will show you the details of a particular recipe (by clicking on it)<br>
     - Clicking on the cross next to the recipe will invoke the recipe deletion request <br>
